fix about section layout bug, adjust footer logo size

--- a/public/styles/site.css
+++ b/public/styles/site.css
@@ -591,6 +591,10 @@ header {
       .about-box .about-text p {
         line-height: 1.9; } }
 
+.about-image-full-height {
+  height: 100%;
+  width: 100%; }
+
 /*------------------------------------*\
 	Portfolio
 \*------------------------------------*/
