--- a/public/styles/site/_about.scss
+++ b/public/styles/site/_about.scss
@@ -102,3 +102,8 @@
     }
   }
 }
+
+.about-image-full-height {
+  height: 100%;
+  width: 100%;
+}
